unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Transaction_Status__c</fullName>
    <inlineHelpText>Displays the state of the transaction, which controls business logic. Payment Status is only applicable when Transaction Status is &#39;Completed&#39;. Only &#39;Open&#39; and &#39;Canceled&#39; statuses should be set manually. See documentation for full status descriptions.</inlineHelpText>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Payment Intent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>