unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Transfer_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Transfer_Group_ID__c</fullName>
    <description>A unique string that Stripe uses as the Transfer Group name. Blackthorn recommends using this Transaction parent&#39;s Salesforce record ID as the unique ID. Populate it with a trigger, flow, process builder, or similar, on the creation of the record.</description>
    <inlineHelpText>A unique string that Stripe uses as the Transfer Group name. Blackthorn recommends using this Transaction parent&#39;s Salesforce record ID as the unique ID. Populate it with a trigger, flow, process builder, or similar, on the creation of the record.</inlineHelpText>
    <label>Transfer Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>