unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Transfer_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Transfer_Payment_Id__c</fullName>
    <inlineHelpText>Unique Stripe-generated value. This is the unique ID for a Transfer Payment and is used to relate a Transfer to a Payout</inlineHelpText>
    <label>Transfer Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>