unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Uncaptured_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Uncaptured_Method__c</fullName>
    <inlineHelpText>This field&#39;s value is set automatically. Manual: If your transaction was authorized and you refunded the charge before it was automatically released. Automatic: The authorization expired and Gateway released the funds back to the card automatically.</inlineHelpText>
    <label>Uncaptured Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>