unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/Collected_by__c.field-meta.xml
<CustomField>
    <fullName>Collected_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collected by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transactions_Collected_by</relationshipName>
    <type>Lookup</type>
</CustomField>