unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/Collection_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Collection_Specialist__c</fullName>
    <formula>bt_stripe__Opportunity2__r.Collection_Specialist__r.FirstName &amp; &quot; &quot; &amp; bt_stripe__Opportunity2__r.Collection_Specialist__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Specialist</label>
    <type>Text</type>
</CustomField>