unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/First_Completed_Captured_Transaction__c.field-meta.xml
<CustomField>
    <fullName>First_Completed_Captured_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Completed/Captured Transaction</label>
    <type>Checkbox</type>
</CustomField>