unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/First_Declined_Process_Completed__c.field-meta.xml
<CustomField>
    <fullName>First_Declined_Process_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Declined Process Completed</label>
    <type>Checkbox</type>
</CustomField>