unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/First_Payment_Declined__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Payment Declined</label>
    <type>Checkbox</type>
</CustomField>