unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date__c</fullName>
    <formula>TEXT(bt_stripe__Opportunity2__r.Last_Call_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Call Date</label>
    <type>Text</type>
</CustomField>