unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/Monterey_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monterey_First_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monterey First Payment</label>
    <type>Checkbox</type>
</CustomField>