unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>bt_stripe__Opportunity2__r.Owner.FirstName &amp; &quot; &quot; &amp;  bt_stripe__Opportunity2__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>