unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/Payment_Rescheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Rescheduled_Date__c</fullName>
    <label>Payment Rescheduled Date</label>
    <type>Date</type>
</CustomField>