unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/Recapture_Status__c.field-meta.xml
<CustomField>
    <fullName>Recapture_Status__c</fullName>
    <label>Recapture Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File closed</fullName>
            </value>
            <value>
                <fullName>Recaptured after re-scheduling</fullName>
            </value>
            <value>
                <fullName>Recaptured same day</fullName>
            </value>
            <value>
                <fullName>Rescheduled (after contact)</fullName>
            </value>
            <value>
                <fullName>Rescheduled (no contact)</fullName>
            </value>
            <value>
                <fullName>1st payment 2nd trade recaptured</fullName>
            </value>
            <value>
                <fullName>1st payment 2nd trade rescheduled (after contact)</fullName>
            </value>
            <value>
                <fullName>1st payment 2nd trade good</fullName>
            </value>
            <value>
                <fullName>1st trade payment decline</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>30% Advance payment</fullName>
            </value>
            <value>
                <fullName>Reinstatement fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>