unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/Temp_Duplicated_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Temp_Duplicated_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary checkbox to track duplicated transactions generated during Biling Data Migration.</description>
    <inlineHelpText>Temporary checkbox to track duplicated transactions generated during Biling Data Migration.</inlineHelpText>
    <label>Temp Dup Transaction</label>
    <type>Checkbox</type>
</CustomField>