unpackaged/main/default/objects/bt_stripe__Transaction__c/recordTypes/bt_stripe__Adjustment.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Adjustment</fullName>
    <active>true</active>
    <description>Auto-created by webhook.</description>
    <label>Adjustment</label>
</RecordType>