unpackaged/main/default/objects/bt_stripe__Transaction__c/recordTypes/bt_stripe__Charge.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Charge</fullName>
    <active>true</active>
    <description>For Authorizations, Charges, Refunds, and Write Offs.</description>
    <label>Charge</label>
</RecordType>