unpackaged/main/default/objects/bt_stripe__Transaction__c/recordTypes/bt_stripe__Transfer.recordType-meta.xml
<RecordType>
    <fullName>bt_stripe__Transfer</fullName>
    <active>true</active>
    <description>For Transfers and Transfer Reversals.</description>
    <label>Transfer</label>
</RecordType>