unpackaged/main/default/objects/bt_stripe__Transaction__c/validationRules/bt_stripe__Validate_transaction_currency.validationRule-meta.xml
<ValidationRule>
    <fullName>bt_stripe__Validate_transaction_currency</fullName>
    <active>true</active>
    <errorConditionFormula>/* Validate the transaction currency and the default currency on PG are the same for Authorize.net provider */
AND($Setup.bt_stripe__Transaction_Validation_Rules__c.bt_stripe__TR_Currency_Validation__c,
	ISPICKVAL(bt_stripe__Payment_Gateway__r.bt_stripe__Provider__c, &quot;Authorize.net&quot;), 
	NOT(ISBLANK(TEXT(bt_stripe__Payment_Gateway__r.bt_stripe__Default_Currency__c))),
	TEXT(bt_stripe__Payment_Gateway__r.bt_stripe__Default_Currency__c)  &lt;&gt;  TEXT(bt_stripe__Currency_ISO__c)
)</errorConditionFormula>
    <errorMessage>The currency on transaction does not match with the currency of the related Payment Gateway</errorMessage>
</ValidationRule>