unpackaged/main/default/objects/bt_stripe__Transaction__c/validationRules/bt_stripe__Validate_write_off_non_gateway.validationRule-meta.xml
<ValidationRule>
    <fullName>bt_stripe__Validate_write_off_non_gateway</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
            ISPICKVAL(bt_stripe__Transaction_Type__c, &quot;Write Off&quot;),
            bt_stripe__Non_Stripe__c = False
            )</errorConditionFormula>
    <errorMessage>Write off transactions must be marked as non-gateway</errorMessage>
</ValidationRule>