unpackaged/main/default/objects/bt_stripe__Transaction__c/listViews/ACH.listView-meta.xml
<ListView>
    <fullName>ACH</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Related_Account__c</columns>
    <columns>bt_stripe__Amount__c</columns>
    <columns>bt_stripe__Due_Date__c</columns>
    <columns>bt_stripe__Processed_Date__c</columns>
    <columns>bt_stripe__Transaction_Sub_Type__c</columns>
    <columns>bt_stripe__Payment_Status__c</columns>
    <columns>bt_stripe__Transaction_Status__c</columns>
    <columns>bt_stripe__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bt_stripe__Transaction_Sub_Type__c</field>
        <operation>equals</operation>
        <value>ACH,Wire Transfer</value>
    </filters>
    <filters>
        <field>bt_stripe__Due_Date__c</field>
        <operation>equals</operation>
        <value>1/9/2025</value>
    </filters>
    <label>ACH</label>
</ListView>