unpackaged/main/default/objects/bt_stripe__Transaction__c/listViews/ACH_Transactions_update.listView-meta.xml
<ListView>
    <fullName>ACH_Transactions_update</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Opportunity2__c</columns>
    <columns>bt_stripe__Transaction_Status__c</columns>
    <columns>bt_stripe__Payment_Status__c</columns>
    <columns>Payment_Method_Record_Type__c</columns>
    <columns>bt_stripe__Non_Stripe__c</columns>
    <columns>bt_stripe__Auto_Capture__c</columns>
    <columns>bt_stripe__Payment_Schedule__c</columns>
    <columns>bt_stripe__Related_Account__c</columns>
    <columns>bt_stripe__Payment_Method__c</columns>
    <columns>bt_stripe__Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>bt_stripe__Transaction__c.bt_stripe__Charge</value>
    </filters>
    <filters>
        <field>bt_stripe__Transaction_Status__c</field>
        <operation>contains</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>bt_stripe__Payment_Schedule__c</field>
        <operation>contains</operation>
        <value>PS-002090</value>
    </filters>
    <label>Non-Gateway / Auto-Process Check Update</label>
</ListView>