unpackaged/main/default/objects/bt_stripe__Transaction__c/listViews/bt_stripe__Completed.listView-meta.xml
<ListView>
    <fullName>bt_stripe__Completed</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Amount__c</columns>
    <columns>bt_stripe__Processed_Date__c</columns>
    <columns>bt_stripe__Payment_Method__c</columns>
    <columns>bt_stripe__Due_Date__c</columns>
    <columns>bt_stripe__Description__c</columns>
    <columns>bt_stripe__Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>Completed</label>
</ListView>