unpackaged/main/default/objects/bt_stripe__Transaction__c/listViews/bt_stripe__Due_In_Next_30_Days.listView-meta.xml
<ListView>
    <fullName>bt_stripe__Due_In_Next_30_Days</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Due_Date__c</columns>
    <columns>bt_stripe__Amount__c</columns>
    <columns>bt_stripe__Transaction_Status__c</columns>
    <columns>bt_stripe__Payment_Status__c</columns>
    <columns>bt_stripe__Processed_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>bt_stripe__Payment_Method__c</columns>
    <columns>bt_stripe__Description__c</columns>
    <columns>bt_stripe__Auto_Capture__c</columns>
    <columns>bt_stripe__Transaction_Type__c</columns>
    <columns>bt_stripe__Transaction_Sub_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bt_stripe__Due_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <filters>
        <field>bt_stripe__Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Due In Next 30 Days</label>
</ListView>