unpackaged/main/default/objects/bt_stripe__Transaction__c/listViews/bt_stripe__Open.listView-meta.xml
<ListView>
    <fullName>bt_stripe__Open</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Amount__c</columns>
    <columns>bt_stripe__Processed_Date__c</columns>
    <columns>bt_stripe__Payment_Method__c</columns>
    <columns>bt_stripe__Due_Date__c</columns>
    <columns>bt_stripe__Description__c</columns>
    <columns>bt_stripe__Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>bt_stripe__Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Open,Process</value>
    </filters>
    <label>Open</label>
</ListView>